--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -3,8 +3,17 @@ title = {{R}: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2023},
+  year = {2024},
   url = {https://www.R-project.org/},
+}
+@Book{car,
+  title = {An {R} Companion to Applied Regression},
+  edition = {Third},
+  author = {John Fox and Sanford Weisberg},
+  year = {2019},
+  publisher = {Sage},
+  address = {Thousand Oaks {CA}},
+  url = {https://socialsciences.mcmaster.ca/jfox/Books/Companion/},
 }
 @Article{catR2012,
   title = {Random Generation of Response Patterns under Computerized Adaptive Testing with the {R} Package {catR}},
@@ -27,82 +36,85 @@ title = {{R}: A Language and Environment for Statistical Computing},
   pages = {1--19},
   doi = {10.18637/jss.v076.c01},
 }
-@Manual{doParallel,
-title = {{doParallel}: Foreach Parallel Adaptor for the `{parallel}' Package},
-  author = {Microsoft Corporation and Steve Weston},
-  year = {2022},
-  note = {R package version 1.0.17},
-  url = {https://CRAN.R-project.org/package=doParallel},
+@Manual{easyRasch,
+title = {{easyRasch}: Psychometric Analysis in R with Rasch Measurement Theory},
+  author = {Magnus Johansson},
+  year = {2024},
+  note = {R package version 0.3.1.1, commit 193677e6ef216361aba836a0a0f1a56bb072ac84},
+  url = {https://github.com/pgmj/easyRasch},
 }
-@Manual{eRm2021a,
-  title = {{eRm: Extended Rasch Modeling}},
-  author = {Patrick Mair and Reinhold Hatzinger and Marco Johannes Maier},
-  year = {2021},
-  note = {1.0-2},
-  url = {https://cran.r-project.org/package=eRm},
+@Article{eRm2007a,
+  title = {Extended Rasch modeling: The eRm package for the application of IRT models in R},
+  author = {Patrick Mair and Reinhold Hatzinger},
+  journal = {Journal of Statistical Software},
+  year = {2007},
+  page = {1--20},
+  volume = {20},
+  issue = {9},
+  doi = {10.18637/jss.v020.i09},
 }
 
 @Article{eRm2007b,
-  title = {{Extended Rasch modeling: The eRm package for the application of IRT models in R}},
+  title = {CML based estimation of extended Rasch models with the eRm package in R},
   author = {Patrick Mair and Reinhold Hatzinger},
-  year = {2007},
-  page = {1--20},
-  journal = {{Journal of Statistical Software}},
-  volume = {20},
-  issue = {9},
-  url = {https://www.jstatsoft.org/v20/i09},
-}
-
-@Article{eRm2007c,
-  title = {{CML based estimation of extended Rasch models with the eRm package in R}},
-  author = {Patrick Mair and Reinhold Hatzinger},
+  journal = {Psychology Science},
   year = {2007},
   page = {26--43},
-  journal = {{Psychology Science}},
   volume = {49},
   issue = {1},
+  doi = {10.18637/jss.v020.i09},
 }
 
-@Article{eRm2009d,
-  title = {{IRT models with relaxed assumptions in eRm: A manual-like instruction}},
+@Article{eRm2009c,
+  title = {IRT models with relaxed assumptions in eRm: A manual-like instruction},
   author = {Reinhold Hatzinger and Thomas Rusch},
+  journal = {Psychology Science Quarterly},
   year = {2009},
   page = {87--120},
-  journal = {{Psychology Science Quarterly}},
   volume = {51},
   issue = {1},
 }
 
-@InProceedings{eRm2013e,
-  title = {{Linear logistic models with relaxed assumptions in R}},
-  author = {Thomas Rusch and Marco Johannes Maier and Reinhold Hatzinger},
-  booktitle = {{Algorithms from and for Nature and Life}},
+@InProceedings{eRm2013d,
+  title = {Linear logistic models with relaxed assumptions in R},
+  author = {Thomas Rusch and Marco Maier and Reinhold Hatzinger},
+  booktitle = {Algorithms from and for Nature and Life},
   editor = {Berthold Lausen and Dirk {van den Poel} and Alfred Ultsch},
-  series = {{Studies in Classification, Data Analysis, and Knowledge Organization}},
+  series = {Studies in Classification, Data Analysis, and Knowledge Organization},
   year = {2013},
   page = {337--347},
-  address = {{New York}},
-  publisher = {{Springer}},
+  address = {New York},
+  publisher = {Springer},
   doi = {10.1007/978-3-319-00035-0_34},
 }
 
-@Article{eRm2015f,
-  title = {{An Empirical Power Analysis of Quasi-Exact Tests for the Rasch Model: Measurement Invariance in Small Samples}},
-  author = {Ingrid Koller and Marco Johannes Maier and Reinhold Hatzinger},
+@Article{eRm2015e,
+  title = {An empirical power analysis of quasi-exact tests for the Rasch model: Measurement invariance in small samples},
+  author = {Ingrid Koller and Marco Maier and Reinhold Hatzinger},
+  journal = {Methodology},
   year = {2015},
+  page = {45--54},
   volume = {11},
   issue = {2},
-  page = {45--54},
-  journal = {{Methodology}},
   doi = {10.1027/1614-2241/a000090},
 }
 
-@Article{eRm2019g,
-  title = {{Testing the Local Independence Assumption of the Rasch Model With Q3-Based Nonparametric Model Tests}},
+@Article{eRm2019f,
+  title = {Testing the local independence assumption of the Rasch model with Q3-based nonparametric model tests},
   author = {Rudolf Debelak and Ingrid Koller},
+  journal = {Applied Psychological Measurement},
   year = {2019},
-  journal = {{Applied Psychological Measurement}},
+  page = {103--117},
+  volume = {44},
+  issue = {2},
   doi = {10.1177/0146621619835501},
+}
+@Manual{iarm,
+title = {{iarm}: Item Analysis in Rasch Models},
+  author = {Marianne Mueller},
+  year = {2022},
+  note = {R package version 0.4.3},
+  url = {https://CRAN.R-project.org/package=iarm},
 }
 @Manual{janitor,
 title = {{janitor}: Simple Tools for Examining and Cleaning Dirty Data},
@@ -124,8 +136,8 @@ title = {{janitor}: Simple Tools for Examining and Cleaning Dirty Data},
 @Manual{lavaanPlot,
 title = {{lavaanPlot}: Path Diagrams for `{Lavaan}' Models via `{DiagrammeR}'},
   author = {Alex Lishinski},
-  year = {2021},
-  note = {R package version 0.6.2},
+  year = {2024},
+  note = {R package version 0.8.1},
   url = {https://CRAN.R-project.org/package=lavaanPlot},
 }
 @Article{mirt,
@@ -141,31 +153,24 @@ title = {{lavaanPlot}: Path Diagrams for `{Lavaan}' Models via `{DiagrammeR}'},
 @Manual{patchwork,
 title = {{patchwork}: The Composer of Plots},
   author = {Thomas Lin Pedersen},
-  year = {2022},
-  note = {R package version 1.1.2},
+  year = {2024},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
 @Manual{qrcode,
-title = {{qrcode}: Generate QRcodes with R. Version 0.2.2},
+title = {{qrcode}: Generate QRcodes with R. Version 0.3.0},
   author = {Thierry Onkelinx and Victor Teh},
-  year = {2023},
+  year = {2024},
   url = {https://thierryo.github.io/qrcode/},
   abstract = {Create static QR codes in R. The content of the QR code is exactly what the user defines. We don't add a redirect URL, making it impossible for us to track the usage of the QR code. This allows to generate fast, free to use and privacy friendly QR codes.},
   keywords = {two-dimensional barcode; matrix barcode},
   doi = {10.5281/zenodo.5040088},
 }
-@Manual{RISEkbmRasch,
-title = {{RISEkbmRasch}: Psychometric Analysis in R with Rasch Measurement Theory},
-  author = {Magnus Johansson},
-  year = {2023},
-  note = {R package version 0.1.20.1},
-  url = {https://github.com/pgmj/RISEkbmRasch},
-}
-@Manual{rmarkdown2023,
+@Manual{rmarkdown2024,
 title = {{rmarkdown}: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2023},
-  note = {R package version 2.22},
+  year = {2024},
+  note = {R package version 2.28},
   url = {https://github.com/rstudio/rmarkdown},
 }
 
@@ -190,9 +195,9 @@ title = {{rmarkdown}: Dynamic Documents for R},
 }
 @Manual{scales,
 title = {{scales}: Scale Functions for Visualization},
-  author = {Hadley Wickham and Dana Seidel},
-  year = {2022},
-  note = {R package version 1.2.1},
+  author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
+  year = {2023},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=scales},
 }
 @Article{tidyverse,
